# git-helper

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/workflows/: rpm-release-fc42.yaml  rpm-release-fc43.yaml
.gitlab/ci/: el10-build.yaml  el9-build.yaml  fedora42-build.yaml  fedora43-build.yaml
.gitlab/ci/templates/: rpm-build.yaml  rust-rpm.yaml  test.yaml
.gitlab/ci/test/: el10-test.yaml  el9-test.yaml  fedora42-test.yaml  fedora43-test.yaml
.rpm/: git-helper.spec
src/: actions.rs  cli.rs  config.rs  constants.rs  lib.rs  main.rs  utils.rs
src/actions/: add_repo.rs  branch_ops.rs  clone_remote_branches.rs  detect_repos.rs  fetch_all.rs  list_repos.rs  mod.rs  pull.rs  pull_all.rs  push.rs  push_all.rs  remove_repo.rs  show_git_graph.rs  status_report.rs
tests/: integration_tests.rs  test_git_helper_config.toml
