[package]
name = "git-helper"
version = "2.7.0"
authors = ["nbrandolino nickbrandolino134@gmail.com"]
description = "A command-line utility designed to simplify the management of multiple Git repositories."
license = "GPL-3.0-or-later"
edition = "2021"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/git-helper", dest = "/usr/bin/git-helper", mode = "755" }
]

[profile.release]
debug = false
opt-level = "z"
panic = "abort"
strip = true

[profile.development]
codegen-units = 256
debug-assertions = true
debug = true
incremental = true
inherits = "dev"
lto = "off"
opt-level = 0
overflow-checks = true
panic = "unwind"

[dependencies]
clap = "4.5"
colored = "2.0.0"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"

[lib]
name = "git_helper"
path = "src/lib.rs"
